GIM_vectorized/solution1/csim/report/matmul_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../main.cpp in debug mode
csim.mk:78: recipe for target 'obj/main.o' failed
In file included from C:/Xilinx/Vitis_HLS/2023.1/include/floating_point_v7_1_bitacc_cmodel.h:149:0,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/hls_fpo.h:143,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/hls_half_fpo.h:18,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/hls_half.h:25,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/ap_fixed.h:9,
                 from ../../../accelerator.h:4,
                 from ../../../main.cpp:1:
C:/Xilinx/Vitis_HLS/2023.1/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2023.1/include/hls_fpo.h:143:0,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/hls_half_fpo.h:18,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/hls_half.h:25,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/ap_fixed.h:9,
                 from ../../../accelerator.h:4,
                 from ../../../main.cpp:1:
C:/Xilinx/Vitis_HLS/2023.1/include/floating_point_v7_1_bitacc_cmodel.h:141:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../main.cpp: In function 'int main()':
../../../main.cpp:32:5: error: reference to 'array' is ambiguous
     array(weight, bias, input, out);
     ^~~~~
In file included from ../../../main.cpp:1:0:
../../../accelerator.h:21:6: note: candidates are: void array(fixed_16 (*)[20], fixed_16*, fixed_16*, fixed_16*)
 void array( fixed_16 w[M][N], fixed_16 b[M], fixed_16 in[N], fixed_16 out[M] );
      ^~~~~
In file included from C:/Xilinx/Vitis_HLS/2023.1/tps/win64/msys64/mingw64/include/c++/6.2.0/tuple:39:0,
                 from C:/Xilinx/Vitis_HLS/2023.1/tps/win64/msys64/mingw64/include/c++/6.2.0/bits/unique_ptr.h:38,
                 from C:/Xilinx/Vitis_HLS/2023.1/tps/win64/msys64/mingw64/include/c++/6.2.0/bits/locale_conv.h:42,
                 from C:/Xilinx/Vitis_HLS/2023.1/tps/win64/msys64/mingw64/include/c++/6.2.0/locale:43,
                 from C:/Xilinx/Vitis_HLS/2023.1/tps/win64/msys64/mingw64/include/c++/6.2.0/iomanip:43,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_private.h:81,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.1/include/ap_fixed.h:9,
                 from ../../../accelerator.h:4,
                 from ../../../main.cpp:1:
C:/Xilinx/Vitis_HLS/2023.1/tps/win64/msys64/mingw64/include/c++/6.2.0/array:90:12: note:                 template<class _Tp, long long unsigned int _Nm> struct std::array
     struct array
            ^~~~~
make: *** [obj/main.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
